--- a/my_app/src/geolocation-view/geolocation-view.component.html
+++ b/my_app/src/geolocation-view/geolocation-view.component.html
@@ -1,7 +1,7 @@
 <div class="geolocationView" *ngFor="let data of geolocationData">
-    <p>ip: {{data.ip}}</p>
-    <p>latitude: {{data.latitude}}</p>
-    <p>longitude: {{data.longitude}}</p>
-    <p>time: {{data.createdAt}}</p>
-    <p>id: {{data.params}}</p> 
+    <p>IP cím: {{data.ip}}</p>
+    <p>Szélességi fok: {{data.latitude}}</p>
+    <p>Hosszúsági fok: {{data.longitude}}</p>
+    <p>Idő: {{data.createdAt}}</p>
+    <p>ID: {{data.params}}</p> 
 </div>
