--- a/my_app/src/camera/camera.component.html
+++ b/my_app/src/camera/camera.component.html
@@ -4,6 +4,7 @@
       [trigger]="triggerObservable"
       (imageCapture)="handleImageCapture($event)"
       (initError)="handleInitError($event)"
+      [videoOptions]="videoOptions"
     ></webcam>
   </div>
   <div class="webcam-controls">
